fixed node add page spacing

--- a/sites/all/themes/doit/sass/partials/03-defaults/markup/forms/_form-defaults.sass
+++ b/sites/all/themes/doit/sass/partials/03-defaults/markup/forms/_form-defaults.sass
@@ -10,14 +10,14 @@
   width: 100%
 
   .form-type-textfield
-    float: left
+    // float: left
     input
       width: 325px
       margin-right: 15px
       margin-bottom: 12px
 
-  fieldset
-    clear: both
+  // fieldset
+  //   clear: both
 
 .page-user-registration
   .popup-content
